Fix aligning when content is wrapped

--- a/src/frontend/public/style.css
+++ b/src/frontend/public/style.css
@@ -63,9 +63,11 @@ body {
 	
 	&.vAlignStart {
 		align-items: flex-start;
+		align-content: flex-start;
 	}
 	&.vAlignCenter {
 		align-items: center;
+		align-content: center;
 	}
 	&.vAlignStretched {
 		align-items: stretch;
@@ -98,9 +100,11 @@ body {
 	
 	&.hAlignStart {
 		align-items: flex-start;
+		align-content: flex-start;
 	}
 	&.hAlignCenter {
 		align-items: center;
+		align-content: center;
 	}
 	&.hAlignEnd {
 		align-items: flex-end;
